used react-bootstrap and added username/pw input fields and two buttons

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,4 +1,10 @@
 
-.App {
+.App{
   text-align: center;
+}
+.wrapper {
+  /* align: center; */
+  text-align: left;
+  display: inline-block;
+  width: 400px;
 }
